--- a/MarsBuddy/MarsBuddy.Droid/packages.config
+++ b/MarsBuddy/MarsBuddy.Droid/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Azure.Mobile.Client" version="3.1.0" targetFramework="monoandroid60" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="monoandroid60" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="monoandroid60" />
   <package id="Microsoft.Bot.Connector.DirectLine" version="3.0.0" targetFramework="monoandroid60" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="monoandroid60" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="monoandroid60" />
   <package id="Microsoft.ProjectOxford.Vision" version="1.0.372" targetFramework="monoandroid60" />
   <package id="Microsoft.Rest.ClientRuntime" version="2.3.5" targetFramework="monoandroid60" />
