--- a/MarsBuddy/MarsBuddy.UWP/project.json
+++ b/MarsBuddy/MarsBuddy.UWP/project.json
@@ -1,5 +1,6 @@
 ﻿{
   "dependencies": {
+    "Microsoft.Azure.Mobile.Client": "3.1.0",
     "Microsoft.Bot.Connector.DirectLine": "3.0.0",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
     "Microsoft.ProjectOxford.Vision": "1.0.372",
